# mathematical-programming-practice

./: .gitignore  LICENSE  README.md
harichan/: .gitignore  README.md  pyproject.toml
harichan/delivery_plan/: delivery_plan.ipynb
harichan/src/math_opt/: utils.py
inaty/practice_column_generation_for_begginer/: README.md  sample_1.py
