[tool.poetry]
name = "mathematical-programming-practice"
version = "0.1.0"
description = "自習用"
authors = ["harichana"]
packages = [
    { include = "math_opt", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
networkx = "^2.5.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "0.5.2"
sphinxcontrib-katex = "^0.8.6"
PyYAML = "^5.4.1"
jupyter-sphinx = "^0.3.2"
nbsphinx = "^0.8.7"
myst-parser = "0.15.1"
PuLP = "^2.6.0"
mip = "^1.13.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
flake8 = "^3.9.2"
pytest = "^6.2.4"
sphinx-autobuild = "^2021.3.14"
black = "^21.6b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"